--- a/dev/css/_modules.scss
+++ b/dev/css/_modules.scss
@@ -23,7 +23,7 @@
 .stad-list-ul {
   margin: 0;
   padding: 0;
-  overflow: scroll;
+  overflow-y: scroll;
   p {
     font-size: 14px;
     line-height: 14px;
